--- a/TheLastLightV2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TheLastLightV2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -64,9 +64,9 @@ LastLevel=/Engine/Maps/Templates/Template_Default
 CleanShutdown=True
 
 [RootWindow]
-ScreenPosition=X=2380.000 Y=119.000
-WindowSize=X=1290.000 Y=730.000
-InitiallyMaximized=False
+ScreenPosition=X=460.000 Y=119.000
+WindowSize=X=1300.000 Y=740.000
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
